JumpScript/tests/baselines/reference/importCallExpressionDeclarationEmit2.errors.txt
tests/cases/conformance/dynamicImport/1.jump(1,5): error TS4023: Exported variable 'p1' has or is using name '"tests/cases/conformance/dynamicImport/0"' from external module "tests/cases/conformance/dynamicImport/0" but cannot be named.


==== tests/cases/conformance/dynamicImport/0.jump (0 errors) ====
    export function foo() { return "foo"; }
    
==== tests/cases/conformance/dynamicImport/1.jump (1 errors) ====
    var p1 = import("./0");
        ~~
!!! error TS4023: Exported variable 'p1' has or is using name '"tests/cases/conformance/dynamicImport/0"' from external module "tests/cases/conformance/dynamicImport/0" but cannot be named.